Removed xml library.
% ls -l build/pack/lib/
total 39824
-rw-r--r--  1 paulp  admin    181757 May 16 09:59 config-0.4.0.jar
-rw-r--r--  1 paulp  admin    164623 May 16 09:59 jline.jar
-rw-r--r--  1 paulp  admin  13869815 May 16 09:59 scala-compiler.jar
-rw-r--r--  1 paulp  admin   6162278 May 16 09:59 scala-library.jar

--- a/build.xml
+++ b/build.xml
@@ -84,6 +84,7 @@ PROPERTIES
   <property name="ant.jar" value="${ant.home}/lib/ant.jar"/>
   <property name="fjbg.jar" value="${lib.dir}/fjbg.jar"/>
   <property name="forkjoin.jar" value="${lib.dir}/forkjoin.jar"/>
+  <property name="scala-xml.jar" value="${lib.dir}/scala-xml.jar"/>
 
   <!-- Sets location of build folders -->
   <property name="build.dir" value="${basedir}/build"/>
@@ -266,10 +267,9 @@ INITIALISATION
 
     <!-- Auxiliary libs placed on every classpath. -->
     <path id="aux.libs">
-      <fileset dir="${lib.dir}">
-        <include name="fjbg.jar"/>
-        <include name="forkjoin.jar"/>
-      </fileset>
+      <pathelement location="${fjbg.jar}"/>
+      <pathelement location="${forkjoin.jar}"/>
+      <pathelement location="${scala-xml.jar}"/>
       <pathelement location="${ant.jar}"/>
       <path refid="lib.extra"/>
       <path refid="dependency.classpath"/>
@@ -297,8 +297,7 @@ INITIALISATION
     <!-- What to have on the compilation path when compiling during certain phases -->
     <path id="quick.compilation.path">
       <pathelement location="${build-quick.dir}/classes/library"/>
-      <pathelement location="${lib.dir}/forkjoin.jar"/>
-      <path refid="lib.extra"/>
+      <path refid="aux.libs"/>
     </path>
     <taskdef resource="scala/tools/ant/sabbus/antlib.xml" classpathref="starr.classpath"/>
   </target>
@@ -343,7 +342,7 @@ LOCAL REFERENCE BUILD (LOCKER)
       <include name="**/*.scala"/>
       <compilationpath>
         <pathelement location="${build-locker.dir}/classes/library"/>
-        <pathelement location="${lib.dir}/forkjoin.jar"/>
+        <path refid="aux.libs"/>
       </compilationpath>
     </scalacfork>
     <propertyfile file="${build-locker.dir}/classes/library/library.properties">
@@ -687,6 +686,7 @@ PACKED QUICK BUILD (PACK)
         <pathelement location="${build-pack.dir}/lib/scala-library.jar"/>
         <pathelement location="${build-pack.dir}/lib/scala-compiler.jar"/>
         <pathelement location="${build-pack.dir}/lib/jline.jar"/>
+        <path refid="aux.libs"/>
       </classpath>
     </taskdef>
     <mkdir dir="${build-pack.dir}/bin"/>
