--- a/build.xml
+++ b/build.xml
@@ -150,6 +150,7 @@ INITIALISATION
   <target name="init.maven.jars" depends="init.maven.tasks">
     <artifact:dependencies pathId="dependency.classpath" filesetId="dependency.fileset">
       <dependency groupId="com.typesafe" artifactId="config" version="0.4.0"/>
+      <dependency groupId="org.improving" artifactId="jvminfo" version="0.1.0-SNAPSHOT"/>
     </artifact:dependencies>
   </target>
 
