scala.tools.nsc.MainGenericRunner becomes scala.Repl.

--- a/build.xml
+++ b/build.xml
@@ -639,7 +639,7 @@ QUICK BUILD (QUICK)
     <mkdir dir="${build-quick.dir}/bin"/>
     <quick-bin
       file="${build-quick.dir}/bin/scala"
-      class="scala.tools.nsc.MainGenericRunner"
+      class="scala.Repl"
       javaFlags="${java.flags}"
       classpathref="quick.bin.classpath"/>
     <quick-bin
@@ -759,7 +759,7 @@ PACKED QUICK BUILD (PACK)
     <mkdir dir="${build-pack.dir}/bin"/>
     <pack-bin
       file="${build-pack.dir}/bin/scala"
-      class="scala.tools.nsc.MainGenericRunner"
+      class="scala.Repl"
       javaFlags="${java.flags}"/>
     <pack-bin
       file="${build-pack.dir}/bin/scalac"
