Added proguard script.

--- a/src/proguard/scala.config
+++ b/src/proguard/scala.config
@@ -1,15 +1,15 @@
 -basedirectory /scala/trunk/build/pack
 -injars       lib/scala-library.jar
-# -outjars      plibrary.jar
+-outjars      /scala/trunk/build/shrunk/lib/scala-library.jar
 -injars       lib/scala-compiler.jar
-# -outjars      pcompiler.jar
+-outjars      /scala/trunk/build/shrunk/lib/scala-compiler.jar
 -injars       lib/scala-repl.jar
--outjars      lib/scala-proguard.jar
+-outjars      /scala/trunk/build/shrunk/lib/scala-repl.jar
 -libraryjars  <java.home>/lib/rt.jar
 -libraryjars  /usr/share/java/ant-1.8.2/lib/ant.jar
 -libraryjars  lib/scala-asm.jar
 -libraryjars  lib/forkjoin.jar:lib/jline.jar
-# -printmapping /scala/trunk/build/pack/out.map
+-printmapping /scala/trunk/build/shrunk/proguard.map
 
 # -dontskipnonpubliclibraryclassmembers
 # -keepparameternames
@@ -25,7 +25,7 @@
 }
 
 -keep class * implements org.xml.sax.EntityResolver
--keep class scala.NotNull
+-keep class scala.*
 
 -keepclassmembers class * {
     ** MODULE$;
