--- a/src/proguard/scala.config
+++ b/src/proguard/scala.config
@@ -1,3 +1,6 @@
+-printusage
+-verbose
+
 -basedirectory /scala/trunk/build/pack
 -injars       lib/scala-library.jar
 -outjars      /scala/trunk/build/shrunk/lib/scala-library.jar
@@ -11,32 +14,37 @@
 -libraryjars  lib/forkjoin.jar:lib/jline.jar
 -printmapping /scala/trunk/build/shrunk/proguard.map
 
-# -dontskipnonpubliclibraryclassmembers
+# -optimizationpasses 3
+-dontobfuscate
+-dontshrink
+-dontskipnonpubliclibraryclassmembers
 # -keepparameternames
 # -renamesourcefileattribute SourceFile
-# -keepattributes Exceptions,InnerClasses,Signature,Deprecated,ScalaSig
-# -keepattributes SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
+-keepattributes Exceptions,InnerClasses,Signature,Deprecated
+-keepattributes SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
+-keepattributes ScalaSignature
 
--dontwarn scala.**
--dontobfuscate
+# -dontwarn scala.**
+# -dontwarn scala.reflect.makro.**
 
 -keepclasseswithmembers public class * {
     public static void main(java.lang.String[]);
 }
+-keepclasseswithmembers class * {
+    ** MODULE$;
+    ** bytes();
+}
 
 -keep class * implements org.xml.sax.EntityResolver
--keep class scala.*
-
--keepclassmembers class * {
-    ** MODULE$;
-}
+-keep class scala.** 
+-keep,allowshrinking class scala.runtime.**
 
 -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinPool {
     long eventCount;
     int  workerCounts;
     int  runControl;
-    scala.concurrent.forkjoin.ForkJoinPool$WaitQueueNode syncStack;
-    scala.concurrent.forkjoin.ForkJoinPool$WaitQueueNode spareStack;
+    # scala.concurrent.forkjoin.ForkJoinPool$WaitQueueNode syncStack;
+    # scala.concurrent.forkjoin.ForkJoinPool$WaitQueueNode spareStack;
 }
 
 -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinWorkerThread {
@@ -48,9 +56,9 @@
 -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinTask {
     int status;
 }
-
--keepclassmembernames class scala.concurrent.forkjoin.LinkedTransferQueue {
-    scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference head;
-    scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference tail;
-    scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference cleanMe;
-}
+# 
+# -keepclassmembernames class scala.concurrent.forkjoin.LinkedTransferQueue {
+#     scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference head;
+#     scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference tail;
+#     scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference cleanMe;
+# }
