--- a/src/proguard/scala.config
+++ b/src/proguard/scala.config
@@ -1,50 +1,126 @@
--printusage
+-target 1.6
+-dontskipnonpubliclibraryclasses
+-dontskipnonpubliclibraryclassmembers
 -verbose
+# -dontoptimize
+-optimizationpasses 3
+-dontobfuscate
+-dontpreverify
+-dontshrink
+-printusage
+# -dump
 
 -basedirectory /scala/trunk/build/pack
--injars       lib/scala-library.jar
+-injars       lib/scala-library.jar(!scala.runtime.ScalaRunTime*)
 -outjars      /scala/trunk/build/shrunk/lib/scala-library.jar
 -injars       lib/scala-compiler.jar
 -outjars      /scala/trunk/build/shrunk/lib/scala-compiler.jar
 -injars       lib/scala-repl.jar
 -outjars      /scala/trunk/build/shrunk/lib/scala-repl.jar
+-injars       lib/scala-asm.jar
+-outjars      /scala/trunk/build/shrunk/lib/scala-asm.jar
+-injars       lib/jline.jar
+-outjars      /scala/trunk/build/shrunk/lib/jline.jar
+-injars       lib/forkjoin.jar
+-outjars      /scala/trunk/build/shrunk/lib/forkjoin.jar
+# -libraryjars  lib/scala-library.jar
+-libraryjars  /scala/trunk/lib_managed/jars/org.fusesource.jansi/jansi/jansi-1.4.jar
 -libraryjars  <java.home>/lib/rt.jar
 -libraryjars  /usr/share/java/ant-1.8.2/lib/ant.jar
--libraryjars  lib/scala-asm.jar
--libraryjars  lib/forkjoin.jar:lib/jline.jar
--printmapping /scala/trunk/build/shrunk/proguard.map
+# -libraryjars  lib/forkjoin.jar:lib/jline.jar
+-printmapping proguard.map
 
-# -optimizationpasses 3
--dontobfuscate
--dontshrink
--dontskipnonpubliclibraryclassmembers
-# -keepparameternames
+# -dontskipnonpubliclibraryclassmembers
+-keepparameternames
 # -renamesourcefileattribute SourceFile
--keepattributes Exceptions,InnerClasses,Signature,Deprecated
--keepattributes SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
--keepattributes ScalaSignature
+-keepattributes *Annotation*,InnerClasses,Signature,SourceFile,LineNumberTable,StackMapTable,EnclosingMethod,Scala,ScalaSig
+# -keepattributes Exceptions,InnerClasses,Signature,Deprecated
+# -keepattributes SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
+# -keepattributes ScalaSignature,Scala,ScalaSig,ScalaLongSignature
+
+-keep class **.package*
+# {
+  # *;
+# }
+# -keep class **.package$ {
+#   *;
+# }
+# -keep public class * {
+#   *** main(java.lang.String[]);
+# }
+
+# -keep class scala.annotation.meta.package
+# -keep class scala.annotation.meta.package$
+# -keep class scala.collection.convert.package
+# -keep class scala.collection.convert.package$
+# -keep class scala.collection.generic.package
+# -keep class scala.collection.generic.package$
+# -keep class scala.collection.package
+# -keep class scala.collection.package$
+# -keep class scala.math.package
+# -keep class scala.math.package$
+# -keep class scala.package
+# -keep class scala.package$
+# -keep class scala.reflect.internal.package
+# -keep class scala.reflect.internal.package$
+# -keep class scala.reflect.makro.internal.package
+# -keep class scala.reflect.makro.internal.package$
+# -keep class scala.reflect.package
+# -keep class scala.reflect.package$
+# -keep class scala.reflect.reify.package
+# -keep class scala.reflect.reify.package$
+# -keep class scala.reflect.runtime.package
+# -keep class scala.reflect.runtime.package$
+# -keep class scala.repl.package
+# -keep class scala.repl.package$
+# -keep class scala.repl.session.package
+# -keep class scala.repl.session.package$
+# -keep class scala.runtime.package
+# -keep class scala.runtime.package$
+# -keep class scala.sys.package
+# -keep class scala.sys.package$
+# -keep class scala.tools.nsc.doc.package
+# -keep class scala.tools.nsc.doc.package$
+# -keep class scala.tools.nsc.io.package
+# -keep class scala.tools.nsc.io.package$
+# -keep class scala.tools.nsc.package
+# -keep class scala.tools.nsc.package$
+# -keep class scala.tools.nsc.symtab.package
+# -keep class scala.tools.nsc.symtab.package$
+# -keep class scala.tools.nsc.util.package
+# -keep class scala.tools.nsc.util.package$
+# -keep class scala.tools.reflect.package
+# -keep class scala.tools.reflect.package$
+# -keep class scala.tools.util.color.package
+# -keep class scala.tools.util.color.package$
+# -keep class scala.Array
+# -keep class scala.Int
 
 # -dontwarn scala.**
 # -dontwarn scala.reflect.makro.**
-
--keepclasseswithmembers public class * {
-    public static void main(java.lang.String[]);
-}
+# 
+# -keepclasseswithmembers public class * {
+#     public static void main(java.lang.String[]);
+#     public static ** *;
+# }
 -keepclasseswithmembers class * {
     ** MODULE$;
     ** bytes();
+    public static *** *;
 }
 
 -keep class * implements org.xml.sax.EntityResolver
 -keep class scala.** 
--keep,allowshrinking class scala.runtime.**
+# -keep class scala.runtime.**
+
+-keepclassmembernames class ** {
+  void readResolve();
+}
 
 -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinPool {
     long eventCount;
     int  workerCounts;
     int  runControl;
-    # scala.concurrent.forkjoin.ForkJoinPool$WaitQueueNode syncStack;
-    # scala.concurrent.forkjoin.ForkJoinPool$WaitQueueNode spareStack;
 }
 
 -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinWorkerThread {
@@ -56,9 +132,3 @@
 -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinTask {
     int status;
 }
-# 
-# -keepclassmembernames class scala.concurrent.forkjoin.LinkedTransferQueue {
-#     scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference head;
-#     scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference tail;
-#     scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference cleanMe;
-# }
