proguarded repl is running.

--- a/src/proguard/scala.config
+++ b/src/proguard/scala.config
@@ -3,10 +3,10 @@
 -dontskipnonpubliclibraryclassmembers
 -verbose
 # -dontoptimize
--optimizationpasses 5
+-optimizationpasses 3
 -dontobfuscate
 -dontpreverify
--dontshrink
+# -dontshrink
 -printusage
 # -dump
 
@@ -29,27 +29,40 @@
 -printmapping proguard.map
 
 -keepparameternames
+-renamesourcefileattribute SourceFile
 -keepattributes *Annotation*,InnerClasses,Signature,SourceFile,LineNumberTable,StackMapTable,EnclosingMethod,Scala,ScalaSig
-# -renamesourcefileattribute SourceFile
-
 -keep class **.package*
 -keep class * implements org.xml.sax.EntityResolver
--keep class scala.** 
+-keep class scala.NotNull
+-keep class scala.*
+-keep class scala.reflect.runtime.**
+-keep class scala.reflect.api.**
+-keep class scala.tools.nsc.ClassLoaders
+-keep class **.ScalaRunTime*
 
+# -keep class scala.** 
 # -dontwarn scala.**
-
-# -keepclasseswithmembers public class * {
-#     public static void main(java.lang.String[]);
-#     public static ** *;
+# 
+# -keep public class * {
+#     public protected *;
 # }
--keepclasseswithmembers class * {
+
+-keepclasseswithmembers public class * {
+    *** main(java.lang.String[]);
+}
+-keepclassmembers class * {
     ** MODULE$;
-    ** bytes();
+    *** bytes();
     public static *** *;
 }
 
--keepclassmembernames class ** {
-  void readResolve();
+-keepclassmembers class * implements java.io.Serializable {
+    static final long serialVersionUID;
+    private static final java.io.ObjectStreamField[] serialPersistentFields;
+    private void writeObject(java.io.ObjectOutputStream);
+    private void readObject(java.io.ObjectInputStream);
+    java.lang.Object writeReplace();
+    java.lang.Object readResolve();
 }
 
 -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinPool {
