--- a/src/proguard/scala.config
+++ b/src/proguard/scala.config
@@ -2,8 +2,8 @@
 -dontskipnonpubliclibraryclasses
 -dontskipnonpubliclibraryclassmembers
 -verbose
-# -dontoptimize
--optimizationpasses 3
+-dontoptimize
+# -optimizationpasses 3
 -dontobfuscate
 -dontpreverify
 # -dontshrink
@@ -11,17 +11,17 @@
 # -dump
 
 -basedirectory /scala/trunk/build/pack
--injars       lib/scala-library.jar(!scala.runtime.ScalaRunTime*)
+-injars       lib/scala-library.jar
 -outjars      /scala/trunk/build/shrunk/lib/scala-library.jar
--injars       lib/scala-compiler.jar
+-injars       lib/scala-compiler.jar(!META-INF/INDEX.LIST)
 -outjars      /scala/trunk/build/shrunk/lib/scala-compiler.jar
--injars       lib/scala-repl.jar
+-injars       lib/scala-repl.jar(!META-INF/INDEX.LIST)
 -outjars      /scala/trunk/build/shrunk/lib/scala-repl.jar
--injars       lib/scala-asm.jar
+-injars       lib/scala-asm.jar(!META-INF/INDEX.LIST)
 -outjars      /scala/trunk/build/shrunk/lib/scala-asm.jar
--injars       lib/jline.jar
+-injars       lib/jline.jar(!META-INF/INDEX.LIST)
 -outjars      /scala/trunk/build/shrunk/lib/jline.jar
--injars       lib/forkjoin.jar
+-injars       lib/forkjoin.jar(!META-INF/INDEX.LIST)
 -outjars      /scala/trunk/build/shrunk/lib/forkjoin.jar
 -libraryjars  /scala/trunk/lib_managed/jars/org.fusesource.jansi/jansi/jansi-1.4.jar
 -libraryjars  <java.home>/lib/rt.jar
@@ -35,10 +35,19 @@
 -keep class * implements org.xml.sax.EntityResolver
 -keep class scala.NotNull
 -keep class scala.*
--keep class scala.reflect.runtime.**
--keep class scala.reflect.api.**
+-keep class scala.math.*
+-keep class scala.runtime.*
+-keep class scala.reflect.**
+# -keep class scala.reflect.runtime.**
+# -keep class scala.reflect.api.**
+# -keep class scala.reflect.makro.**
+# -keep class scala.reflect.mirror.**
 -keep class scala.tools.nsc.ClassLoaders
--keep class **.ScalaRunTime*
+-keep class scala.collection.immutable.Nil*
+-keep class scala.collection.generic.HasNewBuilder
+
+# -keep class **.*RunTime*
+# -keep class scala.Array*
 
 # -keep class scala.** 
 # -dontwarn scala.**
